2004-03-22  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>
        * Npgsql/NpgsqlAsciiRow.cs
        * Npgsql/NpgsqlBinaryRow.cs
        * Npgsql/NpgsqlDataReader.cs: Fixed NpgsqlDataReader.IsDBNull(). It wasn't working for postgresql 7.4+. Thanks Glen Parker (glenebob@nwlink.com) for the patch.


2004-03-13  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

	* Npgsql/NpgsqlConnection.cs:
	* Npgsql/NpgsqlClosedState.cs: Added support for SSL callbacks points. Now, client applications can provide the callbacks. Npgsql provide a default callback implementation which always assumes the certificate is ok. This allows easy use as client don't need to provide callback to use ssl connections. This also fixes bug 705 in gborg.
	* NpgsqlTypes/NpgsqlTypesHelper: Applied patch to correctly parse datetimes values with timezone information. Thanks Glen Parker <glenebob@nwlink.com> for the patch.
	

2004-03-06  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

	* Npgsql/NpgsqlConnectorPool.cs: Fixed bug 706 in gborg. Now Max timeout will be working correctly. Thanks Sami Kuhmonen <feenix@iqs.fi> for the patch.

2004-02-29  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>
	* Npgsql/NpgsqlConnection.cs: Better handling of connection encoding. Added support for encoding and connection timeout in connection string.
	* Npgsql/NpgsqlConnectorPool.cs: Added support for timeout and max connection pool.

2004-02-28  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

	* Npgsql/NpgsqlConnector.cs: Added support for connection encoding.
	* Npgsql/NpgsqlConnection.cs: Better handling of connection encoding.
	* Npgsql/NpgsqlCommand.cs: Fixed an Invalid Index error when executing ExecuteScalar() method with an empty resultset. Thanks Lynn A. Roth for the fix. This fixes bug 687 in gborg.


2004-02-25  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>
