@@ -1,3 +1,6 @@
+2004-03-28  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>
+	* Npgsql/NpgsqlConnection.cs: Implemented IClonable interface in NpgsqlConnection class. Thanks Juliano Barbosa for pointing it out.
+
 2004-03-22  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>
         * Npgsql/NpgsqlAsciiRow.cs
         * Npgsql/NpgsqlBinaryRow.cs
